css/style.css
/* ... */
/* SITE MAIN */


/* QUESTION: why is this border-radius not visible in subpages when overflow is clipped??? */
.site-main {
    background-color: var(--color-body-bg);
    position: relative;
    z-index: 20;
    border-bottom-left-radius: 32px;
    border-bottom-right-radius: 32px;
    margin-bottom: -32px;
    overflow-x: hidden;
}

/* SECTIONS */
section {
    padding: var(--unit-large) var(--unit-medium);
}

/* HERO SECTION */
.hero {
    background-color: var(--color-hero-bg);
    color: var(--color-hero-text);
    display: block;
    place-items: center;

    /* ADD MORE SPACE ON TOP FOR THE ABSOLUTE HEADER */
    padding-top: calc(4em + var(--unit-large));

    h1 {
        font-size: 4em;
        line-height: 1;
        text-wrap: balance;
    }

    h1, h2, h3 {
        color: var(--color-hero-headings);
    }
}

/* SITE FOOTER */

/* Links in class=reveal requires to be z-index:positive. 
   This also goes with the visibility:hidden in the viewstate for "observe-me." 
   "Observe-me" in the markup give access to controling the animation and visibility for hero image
*/
.site-footer.reveal {
    position: sticky;
    bottom: 0;
    z-index: 10;
}

.site-footer {
    border-bottom: 8px solid var(--color-yellow);
    background-color: var(--color-footer-bg);
    color: var(--color-footer-text);
    padding: calc( var(--unit-large) + 5% ) var(--unit-large);
    height: 70vh;
    z-index: 10;

    .social-links a:hover {
        font-family: var(--font-serif-thinitalic);
    }
    
    .social-links a:hover::after {
        display: inline-block;
    }
    
    .social-links a::after{
        display: none;
        content: "";
        width: .8em;
        height: .8em;
        margin-left: 0.4em;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='blue' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z'/%3E%3Cpath fill-rule='evenodd' d='M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z'/%3E%3C/svg%3E");
        background-position: center;
        background-repeat: no-repeat;
        background-size: contain;
    }

    h2, h3 {
        color: var(--color-footer-headings);
        font-feature-settings: "dlig" 1;
        font-weight: normal;
        /* text-transform: uppercase; */
    }

    h2 {
        font-family: var(--font-serif-regular);
        /* font-size: 4vw; */
        font-size: clamp(1.5em, 4vw, 8em);
    }

    h3 {
        font-family: var(--font-serif-regularitalic);
        font-size: 1.25em;
    }

    .social-links {
        font-family: var(--font-serif-thin);
        list-style: none;
        padding: 0;
    }

    ul li {
        margin: .25em;
    }

    a {
        color: var(--color-footer-a);
        
        &:hover {
            color: var(--color-footer-a-hover);
        }
    }

}

/* SITE NAV */ 
.site-nav {
    text-transform: uppercase;
    letter-spacing: 0.15em;
    /* margin: 0 auto;
    width: 1200px; */
}

.site-nav ul {
    /* width: 100%; */
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    /* flex-wrap: wrap; */
    align-items: center;
    justify-content: space-between;
}

.site-nav a {
    padding: .5em 1em;
    text-decoration: none; 
    white-space: nowrap;  
}

@media (max-width: 512px){
    .site-nav {
       font-size: .75em;
    }
}

/* -------------------- */
/* --  UI COMPONENTS -- */
/* -------------------- */

.a-button {
    /* BUTTON ON DARK */
    background-color: transparent;
    border: 2px solid var(--color-white);
    border-radius: 4px;
    color: var(--color-a);
    text-transform: uppercase;

    /* ENABLE BOX MODEL STYLING */
    display: inline-block;
    padding: 0.25em 1em;
    margin: var(--unit-small) 0;

    /* GET RID OF THE UNDERLINE */
    text-decoration: none;

    + .button {
        margin-left: var(--unit-small);
    }

    &:hover {
        color: var(--color-a-hover);
        background-color: var(--color-blue);
        border-color: var(--color-blue);

    }

    /* BUTTON ON LIGHT*/
    &.onlight {
        border-color: var(--color-a-alt);
        color: var(--color-a-alt);

        &:hover {
            border-color: var(--color-blue);
            color: var(--color-yellow);
        }
    }

}


/* -------------------- */
/* --    ANIMATION   -- */
/* -------------------- */

/* ADD SUPPORT FOR SMOOTH SCROLLING - don't use it with JS */
/* html {
    scroll-behavior: smooth;
} */

/* [data-page-loaded="not-loaded"] .hero .observe-me {
    transition-delay: 3s;
} */

/* SCROLL TRIGGERED ANIMATION
 * corresponding with JS
 */
.observe-me.fade-in {
    opacity: 0;
    transition: all .75s ease-out 0.5s;

    &[data-viewstate="active"] {
        opacity: 1;
    }
}

.animate-from-top {
    translate: 0 -100px;

    &[data-viewstate="active"] {
        translate: 0 0;
    }
}

.animate-from-right {
    translate: 20px 0;
    transition-delay: .25s;

    &[data-viewstate="active"] {
        translate: 0 0;
    }
}

.animate-from-left {
    translate: -20px 0;
    transition-delay: .5s;

    &[data-viewstate="active"] {
        translate: 0 0;
    }
}

.animate-from-bottom {
    translate: 0 20px;
    transition-delay: .5s;

    &[data-viewstate="active"] {
        translate: 0 0;
    }
}

.slide-up {
    translate: 0 200px;
    transition-delay: .5s;

    &[data-viewstate="active"] {
        translate: 0 0;
    }
}

.observe-me.scale-up {
    scale: 0;
    transition: all 3s ease-out 0.5s;

    &[data-viewstate="active"] {
        scale: 100%;
    }

}
/* ... */

